  details. The old format is not supported anymore. Use thanm.old for it.
- Game version now must be specified, just as with other tools.
- Support for TH18, TH185, TH19 (full) has been added.
- Support th143/bestshot.anm
- Two new options (-u and -uu) were added to help with rebuilding TH19 files
  bit-perfectly. See documentation for more details.

#### thanm.old
- Will be removed in the next release.
- Support for TH18, TH185, TH19 (trial) has been added.
  TH19 creation won't work, though. Use the new thanm instead.
- You can now specify the version for the -l command.
  This is required for correct dumping of TH18, TH185.
- Support th143/bestshot.anm

#### thecl
- Fix and/or add the following instruction formats:
    th06 71-74, 90
    th08 14, 19, 72, 84-86, 118, 119, 152
    th13 18. 19, 20, 24
- The eclmap format has been changed. It's documented in the thecl manual.
  A converter is available in contrib/eclmapcvt.awk.
- Allow multiple mnemonics for the same instruction.
- Allow eclmap signatures for timeline instructions.
- The parser grammar has been reworked to be completely unambiguous.
- Control statements now require parenthesis around expressions.
  E.g. if (x) goto y; instead of if x goto y;
- More escape sequences are supported: \r \n \0.
- Unary plus operator added.
- Expressions are compile-time evaluated, and constant expressions are allowed
  in more places.
- Added #line directive.
- Added insdef statement for defining new instructions.
- Support for TH18, TH185, TH19 has been added.
- Numerous bug-fixes.
- Add -x option for outputting address information for instructions.
- Add -C option for changing the current directory after opening the archive.
- Add -j option for converting strings between Shift-JIS and UTF-8.

#### thdat
- Automatic version detection now supports th165, th17, th18, th185, th19.
- Detection works better with renamed files.
- Support for TH18, TH185, TH19 has been added.
- Improve extraction speed.